[package]
name = "aptos-consensus-notifications"
description = "The notification interface between state sync and consensus"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-crypto = { workspace = true }
aptos-types = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
move-core-types = { workspace = true }
