[package]
name = "aptos-storage-service-types"
description = "Common types offered by the Aptos storage service"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-compression = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
proptest = { workspace = true }
