[package]
name = "listener"
description = "DDOS listener"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
bytes = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
